Prevent horizontal scrolling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,7 @@
  */
 
 @import "bootstrap";
+
+html, body {
+  overflow-x: hidden;
+}
